--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,9 @@
     <color name="colorPrimary">#2C3E50</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="adminButtonText">#000000</color>
-    <color name="adminButtonBck1">#2E86C1</color>
-    <color name="adminButtonBck2">#ffffff</color>
+    <color name="adminButtonText">#ffffff</color>
+    <color name="adminButtonBck1">#2C3E50</color>
+    <color name="adminButtonBck2">#696969</color>
     <color name="media_item_icon_not_playing">#ccc</color>
 
 
