new ui song list display

--- a/app/src/main/res/layout/media_item_list.xml
+++ b/app/src/main/res/layout/media_item_list.xml
@@ -5,13 +5,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/light_blue"
     tools:context="com.sliit.tharaka.unimusicplayer.MediaListActivity">
 
     <ListView
-        android:background="@drawable/custom_back"
         android:id="@+id/song-list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-
 
 </android.support.constraint.ConstraintLayout>
