--- a/app/src/main/res/layout/media_item_list.xml
+++ b/app/src/main/res/layout/media_item_list.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/light_blue"
+    android:background="@drawable/fullscreen_bg_gradient"
     tools:context="com.sliit.tharaka.unimusicplayer.MediaListActivity">
 
     <ListView
