--- a/app/src/main/res/layout/media_item_play.xml
+++ b/app/src/main/res/layout/media_item_play.xml
@@ -19,13 +19,13 @@
         android:layout_height="fill_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:background="@drawable/custom_back" >
+        android:background="@drawable/fullscreen_bg_gradient" >
 
         <TextView
-            android:id="@+id/line1"
+            android:id="@+id/song_title"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/line2"
+            android:layout_above="@+id/artist_name"
             android:ellipsize="end"
             android:gravity="center_horizontal"
             android:maxLines="1"
@@ -35,7 +35,7 @@
             android:textColor="@color/fullscreen_line_color" />
 
         <TextView
-            android:id="@+id/line2"
+            android:id="@+id/artist_name"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/line3"
@@ -68,7 +68,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:visibility="invisible">
+            android:visibility="visible">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -118,8 +118,9 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="?selectableItemBackgroundBorderless"
+                    android:contentDescription="@string/skip_prev"
                     android:src="@drawable/ic_skip_previous_white_48dp"
-                    android:contentDescription="@string/skip_prev"/>
+                    android:visibility="visible" />
 
                 <ImageView
                     android:id="@+id/play_pause"
@@ -153,14 +154,15 @@
         android:layout_centerInParent="true"
         android:visibility="gone" />
 
-    <!--<android.support.v7.widget.Toolbar-->
-        <!--android:id="@+id/toolbar"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="?attr/actionBarSize"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:background="@drawable/fullscreen_toolbar_bg_gradient"-->
-        <!--android:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
-        <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>-->
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/fullscreen_toolbar_bg_gradient"
+        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:visibility="visible" />
 
 </RelativeLayout>
