--- a/app/src/main/res/drawable-v24/fullscreen_bg_gradient.xml
+++ b/app/src/main/res/drawable-v24/fullscreen_bg_gradient.xml
@@ -3,8 +3,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <gradient
         android:angle="90"
-        android:centerColor="#2C3E50"
-        android:endColor="#00000000"
-        android:startColor="#696969"
+        android:centerColor="#696969"
+        android:endColor="#ffffff"
+        android:startColor="#2C3E50"
         android:type="linear" />
 </shape>
