--- a/app/src/main/res/layout/media_item.xml
+++ b/app/src/main/res/layout/media_item.xml
@@ -12,7 +12,7 @@
         android:layout_marginStart="12dp"
         android:tintMode="src_in"
         android:tint="@color/media_item_icon_not_playing"
-        android:contentDescription="Play item"
+        android:contentDescription="@string/play_eq"
         android:src="@drawable/ic_play_arrow_black_36dp"/>
 
     <LinearLayout
@@ -21,6 +21,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="60dp"
         android:layout_centerVertical="true"
+        android:paddingLeft="20dp"
         android:orientation="vertical">
 
         <TextView
