icon changes and removed unwanted properties

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/admin_music"
     android:gravity="bottom"
-    android:orientation="vertical"
-    android:padding="16dp"
-    android:configChanges="orientation|screenSize|keyboardHidden"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
