--- a/app/src/main/res/drawable-v24/fullscreen_toolbar_bg_gradient.xml
+++ b/app/src/main/res/drawable-v24/fullscreen_toolbar_bg_gradient.xml
@@ -3,7 +3,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <gradient
         android:angle="90"
-        android:startColor="#00000000"
+        android:startColor="#2C3E50"
         android:endColor="#FF000000"
         android:type="linear" />
 </shape>
