--- a/app/src/main/res/layout/media_item.xml
+++ b/app/src/main/res/layout/media_item.xml
@@ -10,10 +10,8 @@
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:layout_marginStart="12dp"
-        android:tintMode="src_in"
-        android:tint="@color/media_item_icon_not_playing"
         android:contentDescription="@string/play_eq"
-        android:src="@drawable/ic_play_arrow_black_36dp"/>
+        android:src="@drawable/ic_play_arrow_black_36dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,7 +24,7 @@
 
         <TextView
             android:id="@+id/song_title"
-            tools:text="Song Title"
+            tools:text="@string/song_title"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
@@ -36,7 +34,7 @@
 
         <TextView
             android:id="@+id/artist_name"
-            tools:text="Artist Name"
+            tools:text="@string/artist_name"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
