--- a/app/src/main/res/layout/media_item_play.xml
+++ b/app/src/main/res/layout/media_item_play.xml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/pageView"
+    android:id="@+id/playItemView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black"
     android:fitsSystemWindows="true">
-
-    <ImageView
-        android:id="@+id/background_image"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:scaleType="centerCrop"
-        android:contentDescription="@string/background_image_str" />
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -68,7 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:visibility="visible">
+            android:visibility="invisible">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -78,8 +71,8 @@
                     android:id="@+id/startText"
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
-                    android:layout_marginStart="@dimen/text_view_margin"
                     android:layout_alignParentStart="true"
+                    android:layout_marginStart="@dimen/text_view_margin"
                     android:gravity="center_vertical"
                     android:maxLines="1"
                     android:textColor="@android:color/white" />
@@ -92,17 +85,17 @@
                     android:layout_gravity="center"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
-                    android:layout_toStartOf="@+id/endText"
-                    android:layout_toEndOf="@+id/startText" />
+                    android:layout_toEndOf="@+id/startText"
+                    android:layout_toStartOf="@+id/endText" />
 
                 <TextView
                     android:id="@+id/endText"
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
-                    android:layout_marginEnd="@dimen/end_text_margin"
                     android:layout_alignParentEnd="true"
-                    android:gravity="center_vertical"
                     android:layout_alignWithParentIfMissing="true"
+                    android:layout_marginEnd="@dimen/end_text_margin"
+                    android:gravity="center_vertical"
                     android:maxLines="1"
                     android:textColor="@android:color/white" />
             </RelativeLayout>
@@ -116,7 +109,6 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="?selectableItemBackgroundBorderless"
                     android:contentDescription="@string/skip_prev"
                     android:src="@drawable/ic_skip_previous_white_48dp"
                     android:visibility="visible" />
@@ -126,7 +118,6 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
-                    android:background="?selectableItemBackgroundBorderless"
                     android:src="@drawable/uamp_ic_play_arrow_white_48dp"
                     android:contentDescription="@string/play_pause"/>
 
@@ -135,7 +126,6 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="?selectableItemBackgroundBorderless"
                     android:src="@drawable/ic_skip_next_white_48dp"
                     android:contentDescription="@string/skip_next"/>
             </LinearLayout>
@@ -157,7 +147,6 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:background="@drawable/fullscreen_toolbar_bg_gradient"
-        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:visibility="visible" />
+        android:visibility="invisible" />
 </RelativeLayout>
