--- a/app/src/main/res/drawable-v24/fullscreen_bg_gradient.xml
+++ b/app/src/main/res/drawable-v24/fullscreen_bg_gradient.xml
@@ -4,7 +4,7 @@
     <gradient
         android:angle="90"
         android:centerColor="#696969"
-        android:endColor="#ffffff"
+        android:endColor="#DCDCDC"
         android:startColor="#2C3E50"
         android:type="linear" />
 </shape>
