--- a/app/src/main/res/layout/media_item_play.xml
+++ b/app/src/main/res/layout/media_item_play.xml
@@ -4,15 +4,14 @@
     android:id="@+id/playItemView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black"
+    android:background="@drawable/fullscreen_bg_gradient"
     android:fitsSystemWindows="true">
 
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:background="@drawable/fullscreen_bg_gradient" >
+        android:layout_alignParentEnd="true">
 
         <ImageView
             android:id="@+id/musicImage"
