--- a/app/src/main/res/layout/media_item.xml
+++ b/app/src/main/res/layout/media_item.xml
@@ -20,6 +20,7 @@
         android:layout_marginStart="60dp"
         android:layout_centerVertical="true"
         android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:orientation="vertical">
 
         <TextView
